<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/AppInfoTheme"
        android:id="@+id/appnametextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/developertextView"
        style="@style/AppInfoTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_name" />

    <TextView
        style="@style/AppInfoTheme"
        android:id="@+id/versionnumbertextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version_number" />

</LinearLayout>